# UXP1A

./: CMakeLists.txt  main.cpp
Exception/: ErrorCodeMessageExceptionBase.cpp  ErrorCodeMessageExceptionBase.h  FileOperationError.cpp  FileOperationError.h  InvalidOperation.cpp  InvalidOperation.h  LindaFileCorrupt.cpp  LindaFileCorrupt.h  LindaPoolOperationTimedOutException.cpp  LindaPoolOperationTimedOutException.h  LindaTupleFormatError.cpp  LindaTupleFormatError.h  LindaTupleMaxSizeExceeded.cpp  LindaTupleMaxSizeExceeded.h  LindaTupleOperationTimedOutException.cpp  LindaTupleOperationTimedOutException.h  LindaTuplePoolConnectionError.cpp  LindaTuplePoolConnectionError.h  LindaTupleTemplateFormatError.cpp  LindaTupleTemplateFormatError.h  LockingError.cpp  LockingError.h  MessageExceptionBase.cpp  MessageExceptionBase.h  NoLindaTupleMatchingTemplateException.cpp  NoLindaTupleMatchingTemplateException.h  SemaphoreLockingError.h  UnknownLindaTemplateValue.cpp  UnknownLindaTemplateValue.h  UnknownLindaTupleOperator.cpp  UnknownLindaTupleOperator.h  UnknownLindaTupleType.cpp  UnknownLindaTupleType.h  UnrecognizedCharacter.h  UnrecognizedToken.h
ExpressionParser/: Identifier.h  Lexer.cpp  Lexer.h  LindaTemplateParser.cpp  LindaTemplateParser.h  LindaTupleParser.cpp  LindaTupleParser.h  Number.h  Parser.cpp  Parser.h  Real.h  String.h  Tag.h  Token.cpp  Token.h  Word.h
IPC/: LindaFileManagerBase.cpp  LindaFileManagerBase.h  LindaFileManagerBase.tpp  LindaQueueFileManager.cpp  LindaQueueFileManager.h  LindaTuplePool.cpp  LindaTuplePool.h  LindaTuplesFileManager.cpp  LindaTuplesFileManager.h  SemaphoreManager.cpp  SemaphoreManager.h
Matcher/: Element.h  Matcher.cpp  Matcher.h  Requirement.h
Model/: LindaTuple.cpp  LindaTuple.h  LindaTupleItem.cpp  LindaTupleItem.h  LindaTupleItemOperator.h  LindaTupleItemTemplate.cpp  LindaTupleItemTemplate.h  LindaTupleItemType.h  LindaTupleTemplate.cpp  LindaTupleTemplate.h  LindaTuplesFileEntry.h  LindaWaitingQueueFileEntry.h
Utilities/: OSXHeaders.h  OSXSemTimeout.h  TimeOSX.h  TimeUtilities.cpp  TimeUtilities.h
